# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added the script http-open-redirect that finds web pages that do not
  properly validate parameters used for HTTP redirects. [Martin Swende]

o [NSE] Added the script broadcast-pc-anywhere that discovers host running the
  PC-Anywhere remote control software on the LAN. [Patrik]

o [NSE] Added the script broadcast-pc-duo that discovers hosts running the
  PC-Duo remote control software on the LAN. [Patrik]

o Added probes for discovering PC-Duo and PC-Anywhere hosts. [Patrik]

o [NSE] Added support for forcing scripts to run agains certain ports by adding
  a plus in front of the script name. [Martin Swende]

o [NSE] Added the script broadcast-wake-on-lan that wakes systems from sleep
  by sending a Wake On Lan packet. [Patrik]

o [NSE] Added the script http-unsafe-output-escaping that checks if parameter
  contents are reflected in responses, aiding in discovering potential XSS
  vulnerabilities. [Martin Swende]

o Made a syntax change in the zenmap.desktop file for compliance with
  the XDG standard. [Frederik Schwarzer]

o [NSE] Added the script http-grep that attempts to match web pages and urls
  against a given pattern. [Patrik]

o [NSE] Added stop function to crawler so that scripts can properly shutdown
  the crawler in case they want to end early. [Patrik]

o [NSE] Fixed issue in path encoding in the http-backup-finder script. [Patrik]

o [NSE] Added the script http-backup-finder that searches for backup copies
  of files discovered by crawling a website. [Patrik]

o [NSE] Added getLimitations function to httpspider that returns any 
  limitations imposed on the crawler. [Patrik]

o [NSE] Modified the httpspider library to prefetch links in the queue and
  change how script arguments are processed. Script and library arguments are
  now processed from within the library. [Patrik]

o The --exclude and --excludefile options can be used together now. [David]
